--- a/layouts/products/single.html
+++ b/layouts/products/single.html
@@ -79,7 +79,7 @@
                         <div class="w-dyn-items">
                             <div class="w-dyn-item">
                                 <a href="/post/14-common-misconceptions-about-web-design" class="suggested-reading w-inline-block">
-                                    <div style="background-image:url(&quot;https://uploads-ssl.webflow.com/5b161991122bed2b364e911a/5b16cc66fae12c39d2bd3952_1528220772241-image11.jpg&quot;)"
+                                    <div style="background-image:url()"
                                         class="sreading-photo"></div>
                                     <div class="sreading-content">
                                         <h2 class="sreading-title">14 Common Misconceptions About Web Design</h2>
@@ -88,7 +88,7 @@
                             </div>
                             <div class="w-dyn-item">
                                 <a href="/post/10-web-design-blogs-you-cant-miss" class="suggested-reading w-inline-block">
-                                    <div style="background-image:url(&quot;https://uploads-ssl.webflow.com/5b161991122bed2b364e911a/5b2ab5780879e6feef3c4162_1529525624138-image7.jpg&quot;)"
+                                    <div style="background-image:url()"
                                         class="sreading-photo"></div>
                                     <div class="sreading-content">
                                         <h2 class="sreading-title">10 Web Design Blogs You Can&#x27;t Miss</h2>
@@ -97,7 +97,7 @@
                             </div>
                             <div class="w-dyn-item">
                                 <a href="/post/the-worst-advice-weve-ever-heard-about-web-design" class="suggested-reading w-inline-block">
-                                    <div style="background-image:url(&quot;https://uploads-ssl.webflow.com/5b161991122bed2b364e911a/5b161996ca7e3983842cc878_1528174994634-image5.jpg&quot;)"
+                                    <div style="background-image:url()"
                                         class="sreading-photo"></div>
                                     <div class="sreading-content">
                                         <h2 class="sreading-title">The Worst Advice We&#x27;ve Ever Heard About Web Design</h2>
@@ -106,7 +106,7 @@
                             </div>
                             <div class="w-dyn-item">
                                 <a href="/post/7-must-have-tools-for-web-designers" class="suggested-reading w-inline-block">
-                                    <div style="background-image:url(&quot;https://uploads-ssl.webflow.com/5b161991122bed2b364e911a/5b318b5c1e5234b80fff9fcc_pablo-heimplatz-317359-unsplash.jpg&quot;)"
+                                    <div style="background-image:url()"
                                         class="sreading-photo"></div>
                                     <div class="sreading-content">
                                         <h2 class="sreading-title">10 Ways A Good Health Insurance Plan Can Make Life Easier</h2>
@@ -115,7 +115,7 @@
                             </div>
                             <div class="w-dyn-item">
                                 <a href="/post/designers-who-changed-the-web" class="suggested-reading w-inline-block">
-                                    <div style="background-image:url(&quot;https://uploads-ssl.webflow.com/5b161991122bed2b364e911a/5b16cc66c9eb0b5ef6385f12_1528220772240-image16.jpg&quot;)"
+                                    <div style="background-image:url()"
                                         class="sreading-photo"></div>
                                     <div class="sreading-content">
                                         <h2 class="sreading-title">Designers Who Changed the Web</h2>
