fix "view all" link

--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -8,7 +8,7 @@
         <div class="div-block-39">
             <div class="div-block-40">
                 <h1 class="h1-no-margins">Featured Readings</h1>
-                <a href="/blog-list" class="view-all w-inline-block">
+                <a href="/posts/featured/" class="view-all w-inline-block">
                     <div>View All</div>
                 </a>
             </div>
