--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -21,45 +21,7 @@
                 </div>
             </div>
             <div class="footer-column">
-                <div class="footer-heading">Links</div>
-                <div class="div-block-12">
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>Home</div>
-                    </a>
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>About</div>
-                    </a>
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>FAQ</div>
-                    </a>
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>Blog</div>
-                    </a>
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>Contact</div>
-                    </a>
-                </div>
-                <div class="footer-heading">Shop Insurance</div>
-                <div class="div-block-12">
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>Life</div>
-                    </a>
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>Health</div>
-                    </a>
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>Auto</div>
-                    </a>
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>Home</div>
-                    </a>
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>Umbrella</div>
-                    </a>
-                    <a href="#" class="footer-link w-inline-block">
-                        <div>View All</div>
-                    </a>
-                </div>
+                {{ partial "footer-nav.html" . }}
             </div>
             <div class="footer-column">
                 <div class="footer-mailing-list">Join Our Mailing List</div>
