update contact form

--- a/layouts/partials/components/contact-component.html
+++ b/layouts/partials/components/contact-component.html
@@ -35,22 +35,22 @@
                     <div class="div-block-11">
                         <div class="checkbox-field w-checkbox">
                             <input type="checkbox" id="auto" name="Auto" class="w-checkbox-input">
-                            <label for="auto" class="w-form-label">Auto &amp; Vehicle Insurance</label>
+                            <label for="auto" class="w-form-label">Auto &sol; Vehicle Insurance</label>
                         </div>
                         <div class="checkbox-field w-checkbox">
                             <input type="checkbox" id="home" name="Home" class="w-checkbox-input">
-                            <label for="home" class="w-form-label">Home &amp; Property Insurance</label>
+                            <label for="home" class="w-form-label">Home &sol; Property Insurance</label>
                         </div><div class="checkbox-field w-checkbox">
                             <input type="checkbox" id="life" name="Life" class="w-checkbox-input">
                             <label for="life" class="w-form-label">Life Insurance</label>
                         </div>
                         <div class="checkbox-field w-checkbox">
-                            <input type="checkbox" id="health" name="Health" data-name="health" class="w-checkbox-input">
+                            <input type="checkbox" id="health" name="Health" class="w-checkbox-input">
                             <label for="health" class="w-form-label">Health Insurance</label>
                         </div>
                         <div class="checkbox-field w-checkbox">
-                            <input type="checkbox" id="dental" name="Dental" data-name="dental" class="w-checkbox-input">
-                            <label for="dental" class="w-form-label">Dental Insurance</label>
+                            <input type="checkbox" id="umbrella" name="Umbrella" class="w-checkbox-input">
+                            <label for="umbrella" class="w-form-label">Umbrella Insurance</label>
                         </div>
                     </div>
                     <input type="submit" data-wait="Please wait..." class="submit-button w-button">
