--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,13 +15,7 @@
                     <div class="text-block-3">&nbsp;&nbsp;{{ $.Site.Data.general_settings.contact_info.phone }}</div>
                     <div class="text-block-4">&nbsp;&nbsp;call us</div>
                 </a>
-                <div class="social-icons">
-                    {{ range .Site.Data.general_settings.social_media }}
-                    <a href="{{ .url }}" class="social-link w-inline-block">
-                        <i class="fab fa-{{ .platform }}"></i>
-                    </a>
-                    {{ end }}
-                </div>
+                {{ partial "social-links.html" . }}
                 <a href="#" data-w-id="6714678d-cb9c-b655-5209-6473232315fb" class="link-block-2 w-inline-block">
                     <i class="fas fa-bars"></i>
                 </a>
