--- a/layouts/partials/main-nav.html
+++ b/layouts/partials/main-nav.html
@@ -57,9 +57,9 @@
             <div class="nav-link-text">Explore&nbsp;&nbsp;<i class="fas fa-chevron-down"></i></div>
         </div>
         <div data-w-id="6714678d-cb9c-b655-5209-6473232315ae" class="dropdown" style="display: none;">
-            {{ range .Site.Menus.explore }}
-            <a href="{{ .URL }}" class="nav-link w-inline-block">
-                <div class="nav-link-text">{{ .Name }}</div>
+            {{ range .Site.Data.menus.explore_menu }}
+            <a href="{{ .url }}" class="nav-link w-inline-block">
+                <div class="nav-link-text">{{ .name }}</div>
             </a>
             {{ end }}
         </div>
