--- a/static/css/insurancesmart.css
+++ b/static/css/insurancesmart.css
@@ -616,17 +616,15 @@ img {
   -ms-flex-pack: start;
   justify-content: flex-start;
 }
-
+footer .social-link {
+  color: #ffffff
+}
+header .social-link {
+  color: #333333;
+}
 .social-link {
   padding: 10px;
-  color: #333;
   text-decoration: none;
-}
-
-.social-link.footer {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  color: #fff;
 }
 
 .slider {
