--- a/static/elhefe/custom.css
+++ b/static/elhefe/custom.css
@@ -90,9 +90,14 @@ button.sc-jAaTju.dirHKA {
     border-bottom: 1px solid #ffbc00;
 }
 
-.sc-dymIpo.jwARNr h1, .sc-bnXvFD.difVtj p {
+.sc-dymIpo.jwARNr {
+    display: none;
+}
+
+.sc-bnXvFD.difVtj h1, .sc-bnXvFD.difVtj p {
     display: none;
 } 
+
 .sc-bnXvFD.difVtj::after {
     content: 'Welcome to your website editor. Navigate through the items on the left to edit the content on your website. 😎'
 }
