--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,9 +10,11 @@
             <nav class="nav-wrapper">
                 {{ partial "main-nav.html" . }}
                 {{ partial "mobile-nav.html" . }}
-                <a href="tel:{{ $.Site.Data.general_settings.contact_info.phone }}" class="nav-link phone w-inline-block">
+                {{ $phoneclean := replace $.Site.Data.general_settings.contact_info.phone "+1-" "" }}
+                {{ $phonelong := replace $.Site.Data.general_settings.contact_info.phone "-" "" }}
+                <a href="tel:{{ $phonelong }}" class="nav-link phone w-inline-block">
                     <div class="text-block-2"><i class="fas fa-phone"></i></div>
-                    <div class="text-block-3">&nbsp;&nbsp;{{ $.Site.Data.general_settings.contact_info.phone }}</div>
+                    <div class="text-block-3">&nbsp;&nbsp;{{ $phoneclean }}</div>
                     <div class="text-block-4">&nbsp;&nbsp;call us</div>
                 </a>
                 {{ partial "social-links.html" . }}
