add is logo to data file and update header accordingly

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,7 @@
         <div class="header-content">
             <div class="div-block-3">
                 <a href="/" class="logo w-inline-block">
-                    <div>Insurance<strong class="bold-text">Smart</strong>
-                    </div>
+                    <img src="{{ $.Site.Data.general_settings.website_settings.logo }}" title="Go Home" alt="Logo for InsuranceSmart insurance agency. We provide health insurance, life insurance, auto insurance, home insurance and more." />
                 </a>
             </div>
             <nav class="nav-wrapper">
