--- a/static/css/insurancesmart.css
+++ b/static/css/insurancesmart.css
@@ -232,14 +232,7 @@ img {
 .section-light .hero-button {
   margin-bottom: 20px;
 }
-.section-dark a {
-  color: #ffffffaa;
-}
-.section-dark .hero-button {
-  margin-bottom: 20px;
-  background-color: transparent;
-  border: 1px solid white;
-}
+
 .hero-button {
   margin-right: 10px;
   padding: 15px 20px;
@@ -360,7 +353,14 @@ img {
 .text-block-3 {
   display: inline-block;
 }
-
+.section-dark a {
+  color: #ffffffaa;
+}
+.section-dark .hero-button {
+  margin-bottom: 20px;
+  background-color: transparent;
+  border: 1px solid white;
+}
 .section-dark {
   position: relative;
   z-index: 1;
@@ -747,7 +747,9 @@ header .social-link {
   height: 50px;
   margin-top: 2px;
 }
-
+.section-dark .button-gold {
+  color: #333333;
+}
 .button-gold {
   position: absolute;
   left: 130px;
