--- a/static/elhefe/custom.css
+++ b/static/elhefe/custom.css
@@ -3,9 +3,9 @@ nav div:nth-of-type(2) .Navigation-m__nav-item___29fP-:nth-of-type(1) {
     display: none;
 }
 
-#notifications-container {
+/* #notifications-container {
     display: none!important;
-}
+} */
 .button.primary, button.button.primary, input.button.primary {
     background-color: #00ac6a;
 }
