--- a/static/elhefe/custom.css
+++ b/static/elhefe/custom.css
@@ -2,6 +2,9 @@
 nav div:nth-of-type(2) .Navigation-m__nav-item___29fP-:nth-of-type(1) {
     display: none;
 }
+nav div:nth-of-type(1) .Navigation-m__nav-item___29fP-:nth-of-type(3) {
+    display: none;
+}
 
 /* #notifications-container {
     display: none!important;
