hide config and quote forms

--- a/static/elhefe/custom.css
+++ b/static/elhefe/custom.css
@@ -1,8 +1,5 @@
 
-nav div:nth-of-type(2) .Navigation-m__nav-item___29fP-:nth-of-type(1) {
-    display: none;
-}
-nav div:nth-of-type(1) .Navigation-m__nav-item___29fP-:nth-of-type(3) {
+nav div:nth-of-type(2) .Navigation-m__nav-item___29fP-:nth-of-type(1), nav div:nth-of-type(1) .Navigation-m__nav-item___29fP-:nth-of-type(3), nav div:nth-of-type(1) .Navigation-m__nav-item___29fP-:nth-of-type(3) {
     display: none;
 }
 
