--- a/static/elhefe/custom.css
+++ b/static/elhefe/custom.css
@@ -1,5 +1,7 @@
 
-nav div:nth-of-type(2) .Navigation-m__nav-item___29fP-:nth-of-type(1), nav div:nth-of-type(1) .Navigation-m__nav-item___29fP-:nth-of-type(3), nav div:nth-of-type(1) .Navigation-m__nav-item___29fP-:nth-of-type(4) {
+nav div:nth-of-type(2) .Navigation-m__nav-item___29fP-:nth-of-type(1), 
+nav div:nth-of-type(1) .Navigation-m__nav-item___29fP-:nth-of-type(3), 
+nav div:nth-of-type(1) .Navigation-m__nav-item___29fP-:nth-of-type(4) {
     display: none;
 }
 
